# uup

./: .gitignore  CMakeLists.txt  README.md
01/: more01  more01.c  more02  more02.c
02/: cp1  cp1.c  utmplib.c  who0.c  who1.c  who2.c
03/: fileinfo  fileinfo.c  ls1.c  ls2  ls2.c
04/: my_pwd.c  spwd  spwd.c
